<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MealDetailsActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="411dp"
        android:layout_height="726dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/details_img_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:background="@drawable/details_img" />


        <ImageView
            android:id="@+id/swipe_img"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:background="@drawable/swipe"
            android:elevation="20dp" />

    </LinearLayout>

    <ScrollView
        android:layout_width="417dp"
        android:layout_height="268dp"
        android:layout_marginTop="460dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/linearLayout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt_japanese"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_medium"
                android:gravity="center_vertical"
                android:lineSpacingExtra="5sp"
                android:paddingLeft="20dp"
                android:paddingTop="22dp"
                android:text="@string/country_kitch"
                android:textColor="@color/country_color"
                android:textSize="13dp" />

            <TextView
                android:id="@+id/ter_chic_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"
                android:fontFamily="@font/roboto_medium"
                android:gravity="top"
                android:lineSpacingExtra="15sp"
                android:paddingLeft="20dp"
                android:text="@string/name_meals_ter"
                android:textColor="@color/ter_color"
                android:textSize="18dp"
                android:translationY="-0.45sp" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/meat_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="21dp"
                    android:layout_marginLeft="21dp"
                    android:layout_marginBottom="34dp"
                    android:background="@drawable/btn_ter"
                    android:fontFamily="@font/roboto_medium"
                    android:text="@string/meat_txt_str"
                    android:textAlignment="center"
                    app:layout_constraintBottom_toBottomOf="@+id/txt_ingr"
                    app:layout_constraintStart_toStartOf="parent"></TextView>

                <TextView
                    android:id="@+id/cass_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@id/meat_txt"
                    android:layout_marginStart="4dp"
                    android:layout_marginLeft="4dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/btn_ter"
                    android:fontFamily="@font/roboto_medium"
                    android:text="@string/casserole_txt_str"
                    android:textAlignment="center"
                    app:layout_constraintStart_toEndOf="@+id/meat_txt"
                    app:layout_constraintTop_toTopOf="parent"/>

                <TextView
                    android:id="@+id/txt_ingr"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="21dp"
                    android:layout_marginLeft="21dp"
                    android:layout_marginEnd="304dp"
                    android:layout_marginRight="304dp"
                    android:text="@string/ingr_txt_str"
                    app:layout_constraintBottom_toTopOf="@+id/rec_txt"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/rec_txt"
                    android:layout_width="330dp"
                    android:layout_height="0dp"
                    android:text="@string/rec_str"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.25"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:ignore="MissingConstraints"
                    tools:layout_editor_absoluteY="68dp" />

                <ImageView
                    android:id="@+id/video_img_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="162dp"
                    app:layout_constraintTop_toTopOf="@+id/rec_txt"
                    app:srcCompat="@drawable/details_video"
                    tools:layout_editor_absoluteX="28dp" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>