<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MealDetailsFragment">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <ImageView
            android:id="@+id/details_img_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:background="@drawable/details_img" />


        <ImageView
            android:id="@+id/swipe_img"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:background="@drawable/swipe"
            android:elevation="@dimen/iv_elevation" />

    </LinearLayout>

    <ScrollView
        android:layout_width="@dimen/scr_layout_width"
        android:layout_height="@dimen/scr_layout_height"
        android:layout_marginTop="@dimen/scr_layout_marginTop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/linearLayout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/ter_chic_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:fontFamily="@font/roboto_medium"
                android:text="text"
                android:textColor="@color/ter_color"
                android:textSize="@dimen/tv_size_vosemn"
                android:visibility="visible"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/txt_japanese"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_medium"
                android:gravity="center_vertical"
                android:lineSpacingExtra="@dimen/tv_lineSpacingExtra"
                android:paddingLeft="@dimen/tv_paddingLeft"
                android:paddingTop="@dimen/tv_paddingTop"
                android:text="@string/country_kitch"
                android:textColor="@color/country_color"
                android:textSize="@dimen/tv_text_size" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/meat_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/btn_ter"
                    android:fontFamily="@font/roboto_medium"
                    android:text="@string/meat_txt_str"
                    android:textAlignment="center"
                    app:layout_constraintEnd_toStartOf="@+id/cass_txt"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"></TextView>

                <TextView
                    android:id="@+id/cass_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@id/meat_txt"
                    android:layout_marginEnd="196dp"
                    android:background="@drawable/btn_ter"
                    android:fontFamily="@font/roboto_medium"
                    android:text="@string/casserole_txt_str"
                    android:textAlignment="center"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/txt_ingr"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ingr_txt_str"
                    app:layout_constraintBottom_toTopOf="@+id/rec_txt"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.072"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/meat_txt"
                    app:layout_constraintVertical_bias="0.541" />

                <TextView
                    android:id="@+id/rec_txt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginBottom="93dp"
                    android:text="@string/rec_str"
                    app:layout_constraintBottom_toTopOf="@+id/video_img_id"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="1.0"
                    tools:ignore="MissingConstraints" />

                <ImageView
                    android:id="@+id/video_img_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:srcCompat="@drawable/details_video" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>